# cross_program_invocation

./: Anchor.toml  Cargo.toml
programs/cross_program_invocation/: Cargo.toml
programs/cross_program_invocation/src/: lib.rs
tests/: cross_program_invocation.ts
